fix: c: /view: Move tools out of viewport
Even if the tools are hidden (transparent), they can still
receive events.

--- a/client/src/app/routes/view/view.component.sass
+++ b/client/src/app/routes/view/view.component.sass
@@ -17,10 +17,11 @@
 
     z-index: 5
 
-    transition: opacity 500ms
+    transition: opacity 500ms, transform 500ms
 
     &.hidden
       opacity: 0
+      transform: translateY(-50px)
 
     img
       width: 32px
